--- a/src/pages/Popup/Popup.css
+++ b/src/pages/Popup/Popup.css
@@ -6,12 +6,11 @@
   right: 0px;
   text-align: center;
   height: 100%;
-  padding: 10px;
-  background-color: #282c34;
+  background-color: #ffffff56;
 }
 
 .App-logo {
-  height: 30vmin;
+  height: 50px;
   pointer-events: none;
 }
 
@@ -22,13 +21,15 @@
 }
 
 .App-header {
-  height: 100%;
+  /* height: 100%; */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding: 5px;
+  background-color: rgb(104, 57, 0);
 }
 
 .App-link {
